# icectl

./: CLAUDE.md  CONFIG.md  DESIGN.md  Makefile  README.md  SESSION_CONTEXT.md  TESTING.md  TROUBLESHOOTING.md  debug_pyiceberg.py  diagnose_s3.py  hello.py  icectl.sh  pyproject.toml  run_docker_seeder.py  test_branch_fix.py  tui_design.md
infra/: docker-compose.yaml  icectl.config.yaml  icectl.docker.config.yaml  seeder.Dockerfile  seeder.py
scripts/: populate.py  reset_warehouse.py  run_integration.sh
src/icectl/: __init__.py  cli.py
src/icelib/: __init__.py  clients.py  config.py  errors.py
src/icetui/: __init__.py  app.py  command_parser.py
src/icetui/models/: __init__.py  navigation_state.py
src/icetui/screens/: __init__.py  base_screen.py  catalog_screen.py  database_screen.py  table_detail_screen.py  table_screen.py
src/icetui/widgets/: __init__.py  data_table.py  search_input.py
tests/: test_catalogs.py  test_db.py  test_table_commands.py  test_tables.py
tests/integration/: test_cli_basic.py
